RESOLVED FIXED236951
css/css-grid/subgrid/auto-track-sizing-001.html fails
https://bugs.webkit.org/show_bug.cgi?id=236951
Summary css/css-grid/subgrid/auto-track-sizing-001.html fails
Matt Woodrow
Reported 2022-02-20 23:08:55 PST
It looks like we're not sizing the subgrid items correctly in the columns direction when determining row sizes.
Attachments
Patch (13.98 KB, patch)
2022-02-24 12:32 PST, Matt Woodrow
ews-feeder: commit-queue-
Patch for landing (14.50 KB, patch)
2022-03-06 16:24 PST, Matt Woodrow
no flags
Radar WebKit Bug Importer
Comment 1 2022-02-20 23:09:05 PST
Matt Woodrow
Comment 2 2022-02-24 12:32:13 PST
EWS
Comment 3 2022-02-27 19:05:03 PST
Committed r290577 (247855@main): <https://commits.webkit.org/247855@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453127 [details].
WebKit Commit Bot
Comment 4 2022-02-27 19:25:41 PST
Re-opened since this is blocked by bug 237264
Matt Woodrow
Comment 5 2022-03-06 16:24:29 PST
Created attachment 453936 [details] Patch for landing
EWS Watchlist
Comment 6 2022-03-06 16:26:42 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
EWS
Comment 7 2022-03-07 02:21:01 PST
Committed r290879 (248110@main): <https://commits.webkit.org/248110@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453936 [details].
Note You need to log in before you can comment on or make changes to this bug.