Source/WebCore/rendering/GridLayoutFunctions.h
@@ -50,6 +50,7 @@ std::optional<LayoutUnit> overridingContainingBlockContentSizeForChild(const Ren
 
 bool isFlippedDirection(const RenderGrid&, GridTrackSizingDirection);
 bool isSubgridReversedDirection(const RenderGrid&, GridTrackSizingDirection outerDirection, const RenderGrid& subgrid);
+LayoutUnit extraMarginForSubgridAncestors(GridTrackSizingDirection, const RenderBox& child);
 
 }
 
